# rm-repl

./: .gitignore  Cargo.toml  Dockerfile  README.md  config.toml  todo.txt
.github/workflows/: rust.yml
src/: commands.rs  evaluate.rs  graphing.rs  inputs.rs  logger.rs  main.rs  repl.rs  run.rs  string_maker.rs  structs.rs  tests.rs  variables.rs
src/commands/: mod.rs  plot_utils.rs  run_commands.rs  structs.rs  tests.rs
src/inputs/: mod.rs
src/modules/: bezier_curve.rs  bindings.rs  commands.rs  common.rs  completion.rs  cube.rs  error_render.rs  evaluate.rs  graphing.rs  inputs.rs  logger.rs  mod.rs  repl.rs  run.rs  scrollable_graph.rs  string_maker.rs  tests.rs  variables.rs
src/repl/: mod.rs
src/run/: mod.rs
src/utils/: mod.rs
src/variables/: mod.rs
