[package]
name = "rmr"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
debug = false
incremental = false

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
crossterm = "0.26.1"
linefeed = { version = "0.6.0", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
rayon = { version = "1.10", default-features = false }
rusty-maths = { git = "https://github.com/ShaneMarusczak/rusty-maths" }
