[package]
name = "rmr"
version = "0.1.0"
edition = "2021"

[profile.release]
panic = "abort"
lto = true
opt-level = 'z'
codegen-units = 1
strip = true
debug = false
incremental = false

[lints.clippy]
panic = "warn"
unwrap_used = "warn"
expect_used = "warn"

[dependencies]
crossterm = "0.26.1"
linefeed = { version = "0.6.0", default-features = false }
num-traits = { version = "0.2.17", default-features = false }
rayon = { version = "1.10", default-features = false }
# Local path dep while the symbol-catalog work sits on a feature branch.
# Switch back to the git ref (with a pinned rev) once rusty-maths merges.
rusty-maths = { path = "../rusty-maths" }
# rusty-maths = { git = "https://github.com/ShaneMarusczak/rusty-maths" }
